cluster/envoy/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy
  labels:
    pod-security.kubernetes.io/enforce: privileged
